--- a/app/views/course/qualification-options.html
+++ b/app/views/course/qualification-options.html
@@ -13,15 +13,26 @@
   </div>
 
   <h1 class="heading-xlarge">
-    Course requirements
+    Qualification options
   </h1>
 
   <div class="grid-row">
     <div class="column-two-thirds">
+      <p class="lede">
+        Help candidates compare courses. What are the differences between the PGCE with QTS course and the QTS only course?
+      </p>
+    </div>
+  </div>
+
+  <div class="grid-row">
+    <div class="column-two-thirds">
       <form action="/course">
-        {{ macros.textarea('qualifications-required', 'Qualifications', 3) }}
-        {{ macros.textarea('personal-requirements', 'Personal requirements', 3) }}
-        {{ macros.textarea('other-requirements', 'Other requirements', 3) }}
+        {{ macros.textarea('qts-qual', 'QTS course', 5) }}
+        {{ macros.textbox('qts-qual-fee', 'QTS course fee', false, 'form-control-xsmall') }}
+        <hr />
+
+        {{ macros.textarea('pgce-with-qts-qual', 'PGCE with QTS course', 5) }}
+        {{ macros.textbox('pgce-with-qts-qual-fee', 'PGCE with QTS course fee', false, 'form-control-xsmall') }}
 
         <div class="add-double-bottom-margin">
           <input type="submit" class="button" value="Save" />
