--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -17,6 +17,13 @@
       <h2 class="heading-large">Exploratory designs</h2>
 
       <h3 class="heading-small">
+        <a href="/history/course-with-variants">Course with fields to explain a user’s choice</a>
+      </h3>
+      <p>
+        Exploration of a course page with fields to capture variants of a course and the differences between them. It’s unclear how courses vary between qualification, funding, subject and accrediting provider – use fields on a course page to allow providers to help candidates make an informed choice.
+      </p>
+
+      <h3 class="heading-small">
         <a href="/history/courses-and-tabs">Courses and tabs</a>
       </h3>
       <p>
