Brain dump thoughts about UCAS course info

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -14,6 +14,12 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
+      <h2 class="heading-large">Documentation</h2>
+
+      <h3 class="heading-small">
+        <a href="/history/imported-from-ucas">UCAS course information and ‘course folding’</a>
+      </h3>
+
       <h2 class="heading-large">Exploratory designs</h2>
 
       <h3 class="heading-small">
