Add missing details to UCAS page

--- a/app/views/history/imported-from-ucas.html
+++ b/app/views/history/imported-from-ucas.html
@@ -36,7 +36,20 @@
         <li>Accrediting provider</li>
         <li>Training provider name</li>
         <li>Training provider contact details – address, email, website</li>
+        <li>Age range (primary, secondary or middle years only)</li>
       </ul>
+
+      <h3 class="heading-medium">Further information required</h3>
+
+      <p>Excluding free text fields, we also need, for each course:</p>
+      <ul class="list list-bullet">
+        <li>Fees</li>
+        <li>Salary (if salaried)</li>
+        <li>Confirmation of QTS/PGCE with QTS status</li>
+        <li>Precise age range</li>
+        <li>Any schools not listed</li>
+      </ul>
+
 
       <h2 class="heading-large">Folding multiple UCAS courses into&nbsp;one</h2>
       <p>Try having one page per subject/provider combination. One search result and page per provider gives a space to explain the different preferences or options available for that provider. <a href="https://trello.com/c/RmjRaDkC/8-one-search-result-and-page-per-provider-gives-a-space-to-explain-the-different-preferences-or-options-available-for-that-provide">Untested hypothesis</a>: Users are making a choice about who will provide their course. Then expressing a preference.</p>
@@ -47,7 +60,11 @@
         <li>salary options (represented by a separate school direct salaried route)</li>
         <li>accrediting provider if multiple (course details may vary too much to do this)</li>
         <li>multiple school direct courses per school into one with all schools</li>
+        <li>full time and part time (are already included in a single course, applicants express preference in UCAS application form)</li>
       </ul>
+
+      <h3 class="heading-medium">Folding on salary</h3>
+      <p>Salaried courses are always presented as their own course on UCAS. Considering a school that has 8 places available, 4 funded with salary and 4 not – it would seem appropriate to merge these two courses into one.</p>
 
       <h3 class="heading-medium">Unfolding for apply</h3>
       <p>We need to communicate how to apply to a variant accurately. eg Which school is available for what, what does and does not have vacancies, what the course codes are – if the choice is represented on UCAS as a separate course.</p>
