Clarify what needs folding down by route

--- a/app/views/history/imported-from-ucas.html
+++ b/app/views/history/imported-from-ucas.html
@@ -48,29 +48,67 @@
         <li>Confirmation of QTS/PGCE with QTS status</li>
         <li>Precise age range</li>
         <li>Any schools not listed</li>
+        <li>Length of full time and part time courses</li>
+        <li>Do SCITTs use universities to accredit PGCE aspect of course</li>
       </ul>
-
 
       <h2 class="heading-large">Folding multiple UCAS courses into&nbsp;one</h2>
       <p>Try having one page per subject/provider combination. One search result and page per provider gives a space to explain the different preferences or options available for that provider. <a href="https://trello.com/c/RmjRaDkC/8-one-search-result-and-page-per-provider-gives-a-space-to-explain-the-different-preferences-or-options-available-for-that-provide">Untested hypothesis</a>: Users are making a choice about who will provide their course. Then expressing a preference.</p>
 
-      <p>Attempt to fold:</p>
-      <ul class="list list-bullet">
-        <li>qualification options (sometimes split on UCAS, sometimes misrepresented)</li>
-        <li>salary options (represented by a separate school direct salaried route)</li>
-        <li>accrediting provider if multiple (course details may vary too much to do this)</li>
-        <li>multiple school direct courses per school into one with all schools</li>
-        <li>full time and part time (are already included in a single course, applicants express preference in UCAS application form)</li>
-      </ul>
+      <div class="body-text">
+        <table>
+          <thead>
+            <tr>
+              <th>Route</th>
+              <th>Needs folding into single course</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Higher Education</td>
+              <td>Nothing</td>
+            </tr>
+            <tr>
+              <td>SCITT</td>
+              <td>Qualification</td>
+            </tr>
+            <tr>
+              <td>School Direct</td>
+              <td>
+                <ul class="list remove-bottom-margin">
+                  <li>Qualification</li>
+                  <li>Salary</li>
+                  <li>Schools</li>
+                </ul>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-      <h3 class="heading-medium">Folding on salary</h3>
+      <h3 class="heading-medium">Folding courses in the SCITT and higher education routes</h3>
+      <p>Higher education courses are almost all PGCE. There is one course per subject already. No folding is required.</p>
+
+      <p>SCITT courses are self-accrediting, they may partner with a university for PGCE aspects of a course but this doesn't appear to be classified as accreditation. A few duplicate courses around qualification, these should be easy to fold into a single course.</p>
+
+      <h3 class="heading-medium">Folding School Direct courses</h3>
+      <p>All the folding complexity lives within this route.</p>
+
+      <p>Fold on school, then on salary, then on qualification.</p>
+
+      <h4 class="heading-small">Folding on salary</h4>
       <p>Salaried courses are always presented as their own course on UCAS. Considering a school that has 8 places available, 4 funded with salary and 4 not – it would seem appropriate to merge these two courses into one.</p>
+
+      <h4 class="heading-small">Folding on schools</h4>
+      <p>Where schools have been given there own subject course by their training provider, these can be combined into a single course – as though they were one couse on UCAS with multiple campus options.</p>
+
+      <h4 class="heading-small">Salaries and schools</h4>
+      <p>If there are schools for a salaried course and different schools for unsalaried, how can that be represented? When we show "4 miles to nearest school" in search results, that may not be for a salaried school – prescient if a user has filtered by salary.</p>
 
       <h3 class="heading-medium">Unfolding for apply</h3>
       <p>We need to communicate how to apply to a variant accurately. eg Which school is available for what, what does and does not have vacancies, what the course codes are – if the choice is represented on UCAS as a separate course.</p>
 
-      <h3 class="heading-medium">Problems folding schools</h3>
-      <p>If there are schools for a salaried course and different schools for unsalaried, how can that be represented? When we show "4 miles to nearest school" in search results, that may not be for a salaried school – prescient if a user has filtered by salary.</p>
+
     </div>
   </div>
 </main>
