Use top nav rather than tabs
* Unique H1 per page
* Less to tab through
* Navigation more prominent

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -194,3 +194,8 @@ dl.aligned dd {
 .study-options-table-vacancies {
   width: 120px;
 }
+
+.multiple-options li {
+  margin-bottom: 5px;
+  border-bottom: 1px solid #ccc;
+}
