--- a/app/views/course.html
+++ b/app/views/course.html
@@ -7,7 +7,7 @@
   {% include "includes/phase_banner_beta.html" %}
   <div class="breadcrumbs">
     <ol>
-      <li><a href="/courses">{{ data['training-provider-name'] }}</a></li>
+      <li><a href="/courses">Courses</a></li>
     </ol>
   </div>
 
