--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -7,25 +7,10 @@
   <div class="breadcrumbs"></div>
 
   <h1 class="heading-xlarge">
-    {{ data['training-provider-name'] }}
+    <span class="heading-secondary">{{ data['training-provider-name'] }}</span>
+    Organisation details
   </h1>
 
-  <ul class="tabs">
-    <li>
-      <a href="/courses">Courses</a>
-    </li>
-    <li>
-      <a href="/schools">Schools</a>
-    </li>
-    <li>
-      <a href="#">Default course</a>
-    </li>
-    <li class="active">
-      <a href="/organisation">Organisation</a>
-    </li>
-  </ul>
-
-  <h2 class="heading-large">Organisation details</h2>
   <p>
     <b>{{ data['training-provider-name'] }}</b><br />
     {{ data['address-line-1'] }}<br />
