--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -10,7 +10,6 @@
 {% endblock %}
 
 {% block proposition_header %}
-
   <div class="header-proposition">
     <div class="content">
       <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
@@ -21,12 +20,14 @@
             {% if serviceName %} {{ serviceName }} {% endif %}
           {% endblock %}
         </a>
-        <!--
+
         <ul id="proposition-links">
-          <li><a href="url-to-page-1" class="active">Navigation item #1</a></li>
-          <li><a href="url-to-page-2">Navigation item #2</a></li>
+          <li><a href="/courses">Courses</a></li>
+          <li><a href="/schools">Schools</a></li>
+          <!-- <li><a href="#">Default course</a></li> -->
+          <li><a href="/organisation">Organisation</a></li>
+          <li><a href="#">Sign out ({{ data['training-provider-name'] }})</a></li>
         </ul>
-        -->
       </nav>
     </div>
   </div>
