Vary course page by subject

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -12,7 +12,7 @@
   </div>
 
   <h1 class="heading-xlarge">
-    {{ data['subject'] or 'Maths' }} at {{ data['training-provider-name'] }}
+    {{ subject or 'Maths' }} at {{ data['training-provider-name'] }}
   </h1>
 
   <div class="grid-row">
