--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -19,7 +19,7 @@
 
       {% set results = [
           {
-            url: '/course',
+            url: '/course/maths',
             subject: 'Maths',
             variants: [
               {
@@ -35,7 +35,7 @@
             ]
           },
           {
-            url: '/course',
+            url: '/course/chemistry',
             subject: 'Chemistry',
             variants: [
               {
@@ -63,7 +63,7 @@
             ]
           },
           {
-            url: '/course',
+            url: '/course/geography',
             subject: 'Geography',
             variants: [
               {
