Add some schools
Represet a real training provider.

--- a/app/views/history/imported-from-ucas.html
+++ b/app/views/history/imported-from-ucas.html
@@ -49,6 +49,7 @@
         <li>Precise age range</li>
         <li>Any schools not listed</li>
         <li>Length of full time and part time courses</li>
+        <li>The name of the main site (first campus) if it differs from the provider name</li>
         <li>Do SCITTs use universities to accredit PGCE aspect of course</li>
       </ul>
 
