--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -20,6 +20,10 @@
         <a href="/history/imported-from-ucas">UCAS course information and ‘course folding’</a>
       </h3>
 
+      <h3 class="heading-small">
+        <a href="/history/what-is-a-course">What is a course?</a>
+      </h3>
+
       <h2 class="heading-large">Exploratory designs</h2>
 
       <h3 class="heading-small">
