Add self-serve registration flow

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -60,6 +60,12 @@
       <p>
         Breaking down data required for each course into a page-per-thing wizard.
       </p>
+
+      <h2 class="heading-large">Sign in user journeys</h2>
+
+      <h3 class="heading-small">
+        <a href="/history/sign-in-self-serve-registration">Self-serve registration</a>
+      </h3>
     </div>
   </div>
 </main>
