Add pre-register user journey

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -64,6 +64,10 @@
       <h2 class="heading-large">Sign in user journeys</h2>
 
       <h3 class="heading-small">
+        <a href="/history/sign-in-pre-register-user">Pre-register user</a>
+      </h3>
+
+      <h3 class="heading-small">
         <a href="/history/sign-in-self-serve-registration">Self-serve registration</a>
       </h3>
     </div>
