--- a/app/views/history/sign-in-self-serve-registration/index.html
+++ b/app/views/history/sign-in-self-serve-registration/index.html
@@ -21,5 +21,7 @@
 
 {{ macros.screenshot('Success and return', 'success-and-return', '/public/images/history/sign-in-self-serve-registration/thumbnails/05-success-and-return.png', '/public/images/history/sign-in-self-serve-registration/05-success-and-return.png', '') }}
 
+{{ macros.screenshot('Receive success email', 'user-receives-success-email', '/public/images/history/sign-in-pre-register-user/thumbnails/10-user-receives-success-email.png', '/public/images/history/sign-in-pre-register-user/10-user-receives-success-email.png', '') }}
+
 </main>
 {% endblock %}
