Invite not pre-register

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -64,7 +64,7 @@
       <h2 class="heading-large">Sign in user journeys</h2>
 
       <h3 class="heading-small">
-        <a href="/history/sign-in-pre-register-user">Pre-register user</a>
+        <a href="/history/sign-in-pre-register-user">Invite a user</a>
       </h3>
 
       <h3 class="heading-small">
