--- a/app/views/history/sign-in-pre-register-user/index.html
+++ b/app/views/history/sign-in-pre-register-user/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'Sign-in: Pre-register a user' %}
+{% set title = 'Sign-in: Invite a user' %}
 {% block page_title %}{{ title }}{% endblock %}
 
 {% block content %}
