Add notes to invite flow

--- a/app/views/history/sign-in-pre-register-user/index.html
+++ b/app/views/history/sign-in-pre-register-user/index.html
@@ -19,13 +19,18 @@
 
 {{ macros.screenshot('Admin sets permission for user', 'admin-sets-permission-for-user', '/public/images/history/sign-in-pre-register-user/thumbnails/05-admin-sets-permission-for-user.png', '/public/images/history/sign-in-pre-register-user/05-admin-sets-permission-for-user.png', '') }}
 
-{{ macros.screenshot('User receives invite email', 'user-receives-invite-email', '/public/images/history/sign-in-pre-register-user/thumbnails/06-user-receives-invite-email.png', '/public/images/history/sign-in-pre-register-user/06-user-receives-invite-email.png', '') }}
+{{ macros.screenshot('User receives invite email', 'user-receives-invite-email', '/public/images/history/sign-in-pre-register-user/thumbnails/06-user-receives-invite-email.png', '/public/images/history/sign-in-pre-register-user/06-user-receives-invite-email.png', '
+  <p>This email provides no context for the service this account relates to. eg It does not say "for publishing teacher training courses".</p>
+') }}
 
 {{ macros.screenshot('User goes to link and verifies', 'user-goes-to-link-and-verifies', '/public/images/history/sign-in-pre-register-user/thumbnails/07-user-goes-to-link-and-verifies.png', '/public/images/history/sign-in-pre-register-user/07-user-goes-to-link-and-verifies.png', '') }}
 
 {{ macros.screenshot('User chooses password', 'user-chooses-password', '/public/images/history/sign-in-pre-register-user/thumbnails/08-user-chooses-password.png', '/public/images/history/sign-in-pre-register-user/08-user-chooses-password.png', '') }}
 
-{{ macros.screenshot('User success and return', 'user-success-and-return', '/public/images/history/sign-in-pre-register-user/thumbnails/09-user-success-and-return.png', '/public/images/history/sign-in-pre-register-user/09-user-success-and-return.png', '') }}
+{{ macros.screenshot('User success and return', 'user-success-and-return', '/public/images/history/sign-in-pre-register-user/thumbnails/09-user-success-and-return.png', '/public/images/history/sign-in-pre-register-user/09-user-success-and-return.png', '
+  <p>There is no link back to our service, instead the user returns to DFE Sign-in.</p>
+  <p>Combining this with the lack of context in the email, there is a disjointed user journey which will see users either not sign up because they don’t know why, or they don’t know how to get to our service because there is no onward link.</p>
+') }}
 
 {{ macros.screenshot('User receives success email', 'user-receives-success-email', '/public/images/history/sign-in-pre-register-user/thumbnails/10-user-receives-success-email.png', '/public/images/history/sign-in-pre-register-user/10-user-receives-success-email.png', '') }}
 
